--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.39", features = ["derive"] }
+enum-tags = "0.1.0"
+enum-tags-traits = "0.1.0"
 
 [profile.release]
 lto = "fat"
