--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 clap = { version = "4.5.39", features = ["derive"] }
 enum-tags = "0.1.0"
 enum-tags-traits = "0.1.0"
+lazy_static = "1.5.0"
 
 [profile.release]
 lto = "fat"
