--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ariadne = "0.5.1"
 clap = { version = "4.5.39", features = ["derive"] }
 enum-tags = "0.1.0"
 enum-tags-traits = "0.1.0"
