--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ levenshtein = "1.0.5"
 rustc-hash = "2.1.1"
 
 inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
+pathbuf = { version = "1.0.0", optional = true}
 
 
 [profile.release]
@@ -21,4 +22,4 @@ strip = "debuginfo"
 #debug = 2
 
 [features]
-native = ["dep:inkwell"]
+native = ["dep:inkwell", "dep:pathbuf"]
