--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rustc-hash = "2.1.1"
 inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
 pathbuf = { version = "1.0.0", optional = true}
 human-panic = {version = "2.0.3", optional = true }
+cfg-if = "1.0.1"
 
 
 [profile.release]
