--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ enum-tags = "0.1.0"
 enum-tags-traits = "0.1.0"
 levenshtein = "1.0.5"
 rustc-hash = "2.1.1"
-debug_with_context = { path = "../debug_with_context"}
+debug_with_context = { git = "https://github.com/Vinz2008/debug_with_context"}
 
 inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
 pathbuf = { version = "1.0.0", optional = true}
