--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2024"
 [dependencies]
 ariadne = "0.5.1"
 clap = { version = "4.5.39", features = ["derive"] }
+cfg-if = "1.0.1"
 enum-tags = "0.1.0"
 enum-tags-traits = "0.1.0"
 levenshtein = "1.0.5"
 rustc-hash = "2.1.1"
-debug_with_context = { git = "https://github.com/Vinz2008/debug_with_context"}
+debug_with_context = "0.1.2"
 
 inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
 pathbuf = { version = "1.0.0", optional = true}
 human-panic = {version = "2.0.3", optional = true }
-cfg-if = "1.0.1"
 
 
 [profile.release]
