--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ debug_with_context = "0.1.2"
 inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
 pathbuf = { version = "1.0.0", optional = true}
 human-panic = {version = "2.0.3", optional = true }
+rustyline = {version = "16.0.0", optional = true }
 
 
 [profile.release]
@@ -26,6 +27,7 @@ strip = "debuginfo"
 
 [features]
 native = ["dep:inkwell", "dep:pathbuf"]
+repl = ["dep:rustyline"]
 human-panic = ["dep:human-panic"]
 gc-test-print = []
 gc-test-collect = []
