--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ levenshtein = "1.0.5"
 rustc-hash = "2.1.1"
 debug_with_context = "0.1.2"
 
-inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
+inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true } # set LLVM_SYS_181_PREFIX to a only static installation to make it build statically
 pathbuf = { version = "1.0.0", optional = true}
 human-panic = {version = "2.0.3", optional = true }
 rustyline = {version = "16.0.0", optional = true }
