work on stack expanding

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "human-panic",
         "gc-test-collect",
         "gc-test-print",
-        "repl"
+        "repl",
+        "stack-expand"
     ],
     "files.associations": {
         "io": "llvm",
