work on list and floats in compiler

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "gc-test-collect",
         "gc-test-print",
         "repl",
-        "stack-expand"
+        "stack-expand",
+        "debug-llvm"
     ],
     "files.associations": {
         "io": "llvm",
