--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ pathbuf = { version = "1.0.0", optional = true}
 human-panic = {version = "2.0.3", optional = true }
 rustyline = {version = "16.0.0", optional = true }
 stacker = { version = "0.1.21", optional = true }
+rand = "0.9.2"
 
 
 [profile.release]
