work on formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,30 @@
         "compare": "c",
         "cstdint": "c",
         "format": "c",
-        "fcntl.h": "c"
+        "fcntl.h": "c",
+        "array": "c",
+        "hash_map": "c",
+        "bitset": "c",
+        "string_view": "c",
+        "hash_set": "c",
+        "initializer_list": "c",
+        "span": "c",
+        "regex": "c",
+        "valarray": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "__tree": "c",
+        "deque": "c",
+        "list": "c",
+        "map": "c",
+        "queue": "c",
+        "set": "c",
+        "stack": "c",
+        "string": "c",
+        "unordered_map": "c",
+        "unordered_set": "c",
+        "vector": "c",
+        "gc.h": "c",
+        "charconv": "c"
     }
 }
