--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ enum-tags-traits = "0.1.0"
 levenshtein = "1.0.5"
 rustc-hash = "2.1.1"
 debug_with_context = "0.1.5"
+pathbuf = { version = "1.0.0"}
 
 inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true } # set LLVM_SYS_181_PREFIX to a only static installation to make it build statically
-pathbuf = { version = "1.0.0", optional = true}
 human-panic = {version = "2.0.3", optional = true }
 rustyline = {version = "16.0.0", optional = true }
 stacker = { version = "0.1.21", optional = true }
@@ -28,7 +28,7 @@ strip = "debuginfo"
 #debug = "full"
 
 [features]
-native = ["dep:inkwell", "dep:pathbuf"]
+native = ["dep:inkwell"]
 debug-llvm = ["native"]
 repl = ["dep:rustyline"]
 human-panic = ["dep:human-panic"]
