--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ human-panic = {version = "2.0.3", optional = true }
 rustyline = {version = "16.0.0", optional = true }
 stacker = { version = "0.1.21", optional = true }
 rand = "0.9.2"
+libloading = "0.8.8"
+libffi = "4.1.2"
 
 
 [profile.release]
