--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ stacker = { version = "0.1.21", optional = true }
 rand = "0.9.2"
 libloading = "0.8.8"
 libffi = "4.1.2"
+mangler = "0.2.0"
 
 
 [profile.release]
