--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rand = "0.9.2"
 libloading = "0.8.8"
 libffi = "4.1.2"
 mangler = "0.2.0"
+const_format = { version = "0.2.35", features = ["fmt"] }
 
 
 [profile.release]
