add caching for llvm bitcode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "stack-expand",
         "debug-llvm",
         "dot-format",
+        "cache",
     ],
     "files.associations": {
         "io": "llvm",
