--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ debug_with_context = "0.1.5"
 pathbuf = { version = "1.0.0"}
 rand = "0.9.2"
 libloading = "0.8.8"
-libffi = "4.1.2"
 mangler = "0.2.0"
 const_format = { version = "0.2.35", features = ["fmt"] }
 serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+libffi = "4.1.2"
 
 inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true } # set LLVM_SYS_181_PREFIX to a only static installation to make it build statically
 human-panic = {version = "2.0.3", optional = true }
