--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ mangler = "0.2.0"
 const_format = { version = "0.2.35", features = ["fmt"] }
 serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
+regex = "1.12.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 libffi = "5.1.0"
