--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "debug-llvm",
         "dot-format",
         "cache",
+        "jit"
     ],
     "files.associations": {
         "io": "llvm",
