--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,4 @@ gc-test-collect = []
 stack-expand = ["dep:stacker"]
 stack-expand-test-print = ["stack-expand"]
 dot-format = ["dep:petgraph"]
+jit = ["native"]
