add bdwgc building support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         "debug-llvm",
         "dot-format",
         "cache",
-        "jit"
+        "jit",
+        "build-bdwgc",
     ],
     "files.associations": {
         "io": "llvm",
