--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,3 +55,4 @@ stack-expand-test-print = ["stack-expand"]
 dot-format = ["dep:petgraph"]
 jit = ["native"]
 build-bdwgc = ["native"]
+musl = ["native"]
