--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0.145"
 serde = { version = "1.0.228", features = ["derive"] }
 regex = "1.12.2"
 macro_static_str_to_char = "0.1.0"
+nohash = "0.2.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 libffi = "5.1.0"
